--- a/hugo.toml
+++ b/hugo.toml
@@ -21,10 +21,10 @@ title = "Akshay Katyal | MrDHat"
   showLanguageSelector = false
 
   # set theme to full screen width
-  fullWidthTheme = true
+  fullWidthTheme = false
 
   # center theme with default width
-  centerTheme = false
+  centerTheme = true
 
   # if your resource directory contains an image called `cover.(jpg|png|webp)`,
   # then the file will be used as a cover automatically.
@@ -79,17 +79,17 @@ title = "Akshay Katyal | MrDHat"
       [languages.en.menu]
         [[languages.en.menu.main]]
           identifier = "blog"
-          name = "Blog"
+          name = "home"
           url = "/"
           weight = 10
         [[languages.en.menu.main]]
           identifier = "about"
-          name = "About"
+          name = "about"
           url = "/about"
           weight = 20
 
       [languages.en.params.logo]
-        logoText = "Akshay Katyal"
+        logoText = "akshay's corner"
         logoHomeLink = "/"
 
 # [module]
