--- a/hugo.toml
+++ b/hugo.toml
@@ -88,6 +88,11 @@ title = "Akshay Katyal | MrDHat"
           url = "/about"
           weight = 20
 
+      [languages.en.params]
+        readMore = "Read more"
+        readOtherPosts = "Read other posts"
+        newerPosts = "Newer posts"
+        olderPosts = "Older posts"
       [languages.en.params.logo]
         logoText = "akshay's corner"
         logoHomeLink = "/"
